# wise

./: .gitignore  AGENT.md  Cargo.toml  PROGRESS.md  README.md  SANDBOX.md
src/: config.rs  main.rs  output.rs
src/agent/: mod.rs
src/cli/: activity.rs  agent.rs  auth.rs  balance.rs  card.rs  card_order.rs  config_cmd.rs  currency.rs  docs.rs  jose.rs  mod.rs  profile.rs  quote.rs  rate.rs  recipient.rs  sandbox.rs  simulate.rs  transfer.rs  webhook.rs
src/client/: error.rs  jose.rs  mod.rs  sse.rs
src/sandbox/: audit.rs  mod.rs  path.rs  policy.rs  ratelimit.rs
