[package]
name = "wise"
version = "0.1.0"
edition = "2021"
description = "Agent-friendly CLI for the Wise Platform API"
license = "MIT"

[[bin]]
name = "wise"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
directories = "5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = "7"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
url = "2"
base64 = "0.22"
atty = "0.2"

# JWE (RSA-OAEP-256 + A256GCM) for sensitive card details and SCA endpoints.
# Pure-Rust crypto stack — no openssl bindings.
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# No-echo terminal input for `wise agent paste` (PAN/CVV/expiry).
rpassword = "7"

[target.'cfg(unix)'.dependencies]
# `geteuid` for the lockdown ownership check on sandbox policy files.
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
